--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "geo-coords-distance": "^2.0.5"
   },
   "dependencies": {
+    "@tyriar/fibonacci-heap": "^2.0.7",
     "babel-core": "^6.26.0",
     "body-parser": "^1.18.2",
     "heap": "^0.2.6"
