--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   "homepage": "https://github.com/pasvistelik/osm-road-graph#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-regenerator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-plugin-transform-regenerator": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
-    "rimraf": "^2.6.1",
+    "geo-coords-distance": "^2.0.10",
     "node-fetch": "^1.7.1",
-    "geo-coords-distance": "^2.0.5"
+    "rimraf": "^2.6.1"
   },
   "dependencies": {
     "@tyriar/fibonacci-heap": "^2.0.7",
